fix: The field Salary's input had it's label aligned to the right when selected or when not empty.

--- a/src/components/atoms/CurrencyInput/CurrencyInput.scss
+++ b/src/components/atoms/CurrencyInput/CurrencyInput.scss
@@ -1,14 +1,15 @@
 @use 'Styles/variables' as g;
 
 .currency__container {
-  height: g.$input-height;
-  width: 105px;
+  height: g.$input-height - 5;
+  width: 95px;
   position: absolute;
   display: grid;
-  grid-template-columns: 40px 65px;
+  grid-template-columns: 30px 65px;
   border: 2px solid #373F4175;
   border-radius: 15%;
   padding: 3px;
+  margin: 2.5px;
 }
 
 .cell__container {
@@ -39,7 +40,7 @@
   z-index: 10;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 .currency__input-arrow {
